feat[ar]/edit relation types from owning entity
